Feat: RAG 유사도 제한 완화
JIRA: S13P31D204-248